# mlops-data-quality-monitoring

./: .env.example  .gitignore  README.md  docker-compose.yml  instructions.md  pyproject.toml
.github/workflows/: ci.yml
docker/dagster/: Dockerfile  dagster.yaml  workspace.yaml
docker/pipeline/: Dockerfile  requirements.txt
scripts/: seed_baseline.py  simulate_drift.py
sql/: init.sql
src/: __init__.py  definitions.py
src/assets/: __init__.py  ingestion.py  routing.py  validation.py
src/drift_simulator/: __init__.py  corrupt_data.py
src/resources/: __init__.py  minio_resource.py  postgres_resource.py
src/utils/: data_loader.py
tests/: test_drift_simulator.py  test_routing.py  test_validation.py
